--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
       "**/hardhat-ts/**"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "react-p5": "^1.3.30"
+  },
   "devDependencies": {
     "husky": "^7.0.2",
     "lint-staged": "^13.0.3"
