--- a/package.json
+++ b/package.json
@@ -68,9 +68,6 @@
       "**/hardhat-ts/**"
     ]
   },
-  "dependencies": {
-    "react-p5": "^1.3.30"
-  },
   "devDependencies": {
     "husky": "^7.0.2",
     "lint-staged": "^13.0.3"
@@ -80,5 +77,8 @@
       "prettier --write",
       "eslint --fix"
     ]
+  },
+  "dependencies": {
+    "react-p5-wrapper": "^3.3.0"
   }
 }
